tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__AFewMoreThings-AAAAAAAAAAAAAAAAAAABgQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 385,
  "prerequisites": [
    384,
    376,
    381,
    382,
    383
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Ok, I think I have everything I need to assemble the device. Can you assist me with some additional materials? I need to update some of my machines, as these exotic components you got me damaged some of them already. Don't worry, I have a list here.\n\nSome of my circuits burned to a crisp while I was trying to measure the conductivity of these soul and life shards. I need better ones.\n\nGood lord, these mysterious crystals have eaten away my diamond grinding head! How could that happen? Can you get me a better one?\n\nDo you see that pile of Rhodium and Palladium over there? No? Neither do I. Because the machine was VAPORIZED! Good that you gave me 2 singularities, the first one... Well... Just get me a better casing, would you?\n\nIt seems, that the stabilizers need... stabilizing... But I'm out of field generators. Can you help me with this?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Few More Things...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "SECRET"
  },
  "required_prerequisites": [
    384,
    376,
    381,
    382,
    383
  ],
  "rewards": [],
  "tasks": []
}
