tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__CheaperEVCircuit-AAAAAAAAAAAAAAAAAAAKTQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2637,
  "prerequisites": [
    2627,
    1685
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With a higher voltage, you can use your ASoCs to make cheaper Quantum Processors.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Cheaper EV Circuits",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2627,
    1685
  ],
  "rewards": [],
  "tasks": []
}
