tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__ConfiguringTecTe-AAAAAAAAAAAAAAAAAAAKew==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2683,
  "prerequisites": [
    2005
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Many TecTech multis can be customized by adjusting certain internal numbers called parameters. You can directly adjust them in the GUI.\n\nIf there are lit up sections in the parameters part of the multi interface (see the TecTech Multiblocks quest), you can configure the multi, otherwise there is nothing to do.\n\nWe'll be using the Quantum Computer as our example, since that is what you probably want it for.\n\nFirst we need to understand the parameter naming, like ID:0:1:I. The first number represents the parameter block. For the QC only block 0 is used. Each such block can have up to 4 used parameters, 2 inputs and 2 outputs. The letter at the end specifies if a parameter is an input or output with I or O and the number in the middle distinguishes the 2 parameters of this kind in the block. It is either 0 or 1.\n\nInputs are something that is either set or is a default. Outputs give information that the machine sends to you, that indicates things. (like heat or Computation)\n\nAnd lastly, the Parametrizer Memory Card lets you copy settings from one machine to another easily.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Configuring TecTech Multiblocks",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2005
  ],
  "rewards": [],
  "tasks": []
}
