tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__DataBank-AAAAAAAAAAAAAAAAAAAKbw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2671,
  "prerequisites": [
    2006
  ],
  "properties": {
    "auto_claim": false,
    "desc": "By now you probably feel overwhelmed with the number of data sticks needed for your Assembly Line. TecTech has a solution for you: The Data Bank. It allows you to store more than just 16 data sticks and can be connected to multiple Assembly Lines at the same time.\n\nPlace the controller one block above the ground and use the Multiblock Structure Hologram Projector to see how it is built. You will need a Maintenance Hatch and at least an EV Energy Hatch, though the power requirements can be much higher if you use many Data Access Hatches and Data Bank Master Connectors, for now you should start with an LuV energy hatch. Trying to run the Data Bank and then scanning the controller will tell you how much EU/t is needed.\n\nYou will need more blocks than what is asked for in this quest, as the number of Data Access Hatches and Connectors is up to you. You can have a maximum of 15 combined.\n\nThe Assembly Line Reception Connector replaces your old Data Access Hatch on the Assembly Line. Connect it to a Master Connector on the Data Bank with Optical Fiber Cable and make sure to color the hatches and the cable.\n\n[note]If you can't figure out what blocks to place, pay attention to the tooltip in the bottom-left when using the Multiblock Structure Hologram Projector. In this case the filler blocks are Computer Casing.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Data Bank",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2006
  ],
  "rewards": [],
  "tasks": []
}
