tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__EnrichedNaquadah-AAAAAAAAAAAAAAAAAAALZw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2919,
  "prerequisites": [
    2947
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Ah, you made it.\n\nYou can choose to smelt it with zinc in an EBF or electrolyze it. Either is fine but you can fully recycle the zinc, so the EBF recipe is better if you want the ingot.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Enriched Naquadah Ingot",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2947
  ],
  "rewards": [],
  "tasks": []
}
